gitlab/ingress_gitlab_webservice.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: webservice
    app.kubernetes.io/managed-by: Helm
    chart: webservice-5.0.5
    gitlab.com/webservice-name: default
    heritage: Helm
    release: gitlab
  name: gitlab-webservice-default
  namespace: default
spec:
  rules:
  - host: tccmurilo.sj.ifsc.edu.br
    http:
      paths:
      - backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
        path: /gitlab/
        pathType: Prefix
      - backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8080
        path: /admin/sidekiq/
        pathType: Prefix
  tls:
  - hosts:
    - gitlab.tccmurilo.sj.ifsc.edu.br
    secretName: gitlab-gitlab-tls
status:
  loadBalancer: {}
